new line added in index file

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     </script>
 
     <!-- CONTENT SECTION -->
+     <h1> Welcome to online Interior store</h1>
     <div id="3"></div>
     <script>
         load("content.html");
